[gd_scene format=3 uid="uid://dif6ladeu681i"]

[ext_resource type="Script" uid="uid://leecs86224gh" path="res://Levels/MainMenu/main_menu.gd" id="1_e2pmq"]
[ext_resource type="FontFile" uid="uid://cbrddtp1701de" path="res://Levels/MainMenu/Medieval Scroll of Wisdom.ttf" id="3_3foys"]
[ext_resource type="Texture2D" uid="uid://dyupmq7df3kge" path="res://Levels/MainMenu/stone mask hollow.png" id="4_3u71f"]
[ext_resource type="Texture2D" uid="uid://3y2kwm1gvqbd" path="res://Levels/MainMenu/GGJ 2026 Credits.png" id="4_q7u2s"]
[ext_resource type="Texture2D" uid="uid://cumkjgyv3munq" path="res://Levels/MainMenu/Theif Mask Hollow.png" id="5_p4dqk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7g58x"]
bg_color = Color(0.1428582, 0.14285827, 0.14285818, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2pmq"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rjeep"]
bg_color = Color(0.47657818, 0.47657818, 0.47657818, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3foys"]
bg_color = Color(0.7694324, 0.7694324, 0.7694324, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rjeep"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wqh7t"]
bg_color = Color(0, 0, 0, 1)

[node name="Main Menu" type="Control" unique_id=950914087]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e2pmq")

[node name="Panel" type="Panel" parent="." unique_id=1472195349]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7g58x")

[node name="StoneMaskHollow" type="Sprite2D" parent="." unique_id=131431498]
position = Vector2(210, 406)
scale = Vector2(0.706, 0.706)
texture = ExtResource("4_3u71f")

[node name="TheifMaskHollow" type="Sprite2D" parent="." unique_id=459466491]
position = Vector2(942.99994, 405)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_p4dqk")

[node name="Main Buttons" type="VBoxContainer" parent="." unique_id=205699472]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.25
offset_top = -83.75
offset_right = 145.25
offset_bottom = 241.75
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Play Button" type="Button" parent="Main Buttons" unique_id=1595329885]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_e2pmq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rjeep")
theme_override_styles/hover = SubResource("StyleBoxFlat_3foys")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rjeep")
text = "PLAY"

[node name="Credits Button" type="Button" parent="Main Buttons" unique_id=609688673]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_e2pmq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rjeep")
theme_override_styles/hover = SubResource("StyleBoxFlat_3foys")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rjeep")
text = "CREDITS"

[node name="Quit Button" type="Button" parent="Main Buttons" unique_id=517170479]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_e2pmq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rjeep")
theme_override_styles/hover = SubResource("StyleBoxFlat_3foys")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rjeep")
text = "QUIT"

[node name="Label" type="Label" parent="." unique_id=1746757139]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -421.5
offset_top = -220.0
offset_right = 421.5
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.78039217)
theme_override_fonts/font = ExtResource("3_3foys")
theme_override_font_sizes/font_size = 66
text = "The Masker Raid"
horizontal_alignment = 1

[node name="Credits" type="Panel" parent="." unique_id=1069826396]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wqh7t")

[node name="TextureRect" type="TextureRect" parent="Credits" unique_id=1738424023]
layout_mode = 0
offset_left = 40.0
offset_top = -1.0
offset_right = 1122.0
offset_bottom = 567.0
texture = ExtResource("4_q7u2s")
expand_mode = 1

[node name="Back Button" type="Button" parent="Credits" unique_id=1922229915]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 246.0
offset_right = 96.25
offset_bottom = 301.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_e2pmq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rjeep")
theme_override_styles/hover = SubResource("StyleBoxFlat_3foys")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rjeep")
text = "BACK"

[connection signal="pressed" from="Main Buttons/Play Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Main Buttons/Credits Button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Main Buttons/Quit Button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Credits/Back Button" to="." method="_on_back_button_pressed"]
